refactor(curves): 优化CurveFrameAlongPathNode的导入和代码实现
- 移除不必要的导入语句包括NodeEffect、NodeInfo、BaseNode、LineData、PolylineData、Curve和Vec3d
- 简化类文件结构减少冗余依赖
- 将sampleDistances获取最后元素的方法从get(size-1)改为getLast()提高代码可读性